[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-steamworks"
version = "0.1.0"
description = "Steamworks SDK integration for the Panda3D game engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["panda3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tobspr/P3DModuleBuilder"

[tool.setuptools]
packages = ["panda3d_steamworks"]

[tool.setuptools.package-data]
panda3d_steamworks = ["*.pyd", "*.so", "*.dll", "*.dylib", "*.pdb"]
