[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8", "jinja2>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-steamworks"
dynamic = ["version"]
description = "Steamworks SDK integration for the Panda3D game engine"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["panda3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/DigitalDescent/panda3d-steamworks"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["panda3d_steamworks"]

[tool.setuptools.package-data]
panda3d_steamworks = ["*.pyd", "*.so", "*.dll", "*.dylib", "*.pdb"]
